<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CurrencyInformationFragment" >


    <Button
        android:id="@+id/btn_get_pair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_btn_get_pair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_date_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_btn_date_from"
        android:hint="@string/text_btn_date_from"
        app:layout_constraintEnd_toEndOf="@+id/btn_get_pair"
        app:layout_constraintStart_toStartOf="@+id/btn_get_pair"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_pair" />

    <Button
        android:id="@+id/btn_date_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_btn_date_to"
        app:layout_constraintEnd_toEndOf="@+id/btn_date_from"
        app:layout_constraintStart_toStartOf="@+id/btn_date_from"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_from" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_signal_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_to" />

</androidx.constraintlayout.widget.ConstraintLayout>